--- a/Week01/第一周 学习方法和构建知识体系.md
+++ b/Week01/第一周 学习方法和构建知识体系.md
@@ -1,1 +1,119 @@
 # 第一周 学习方法和构建知识体系
+
+
+
+## 浏览器总论
+
+- 工作原理
+  - 开始：URL
+  - 结束：Bitmap位图
+  - 过程：
+    - URL拿到HTML文件
+    - Parse得到DOM树
+    - DOM经过CSS computing 得到带CSS的DOM（DOM WITH CSS）
+    - DOM进行layout（布局或者排版）得到DOM WITH POSITION
+    - 通过render得到对应的bitmap
+
+## 状态机相关
+
+- 有限状态机：
+  - 每一个状态都是一个机器
+    - 每一个机器我们可以做计算存储输出
+    - 所有的机器接受的输入一致
+    - 每一个机器本身没有状态，用函数来表示的话，它应该是纯函数（无副作用，仅调整状态）
+  - 每一个机器知道下一个状态
+    - 每一个机器都有确定的下一个状态 Moore状态机
+    - 每一个机器都需要根据参数确定下一个状态 Mealy状态机
+
+- 处理字符串
+
+  - 不使用有限状态机处理字符串
+
+  ```javascript
+  function match_AB_Ex(string) {
+      let foundA = false
+      for (let c of string) {
+          if (c == "a")
+              foundA = true
+          else if (foundA && c == "b")
+              return true
+          else
+              foundA = false
+      }
+      return false
+  }
+  ```
+
+  - 使用有限状态机处理字符串
+
+  ```javascript
+  function match(string) {
+      state = start;
+      for (let c of string) {
+          state = state(c)
+      }
+      return state === end;
+  }
+  
+  function start(c) {
+      if (c === "a")
+          return foundA;
+      else
+          return start;
+  }
+  
+  function end(c) {
+      return end
+  }
+  
+  function foundA(c) {
+      if (c === "b")
+          return foundB;
+      else
+          return start(c);
+  }
+  
+  function foundB(c) {
+      if (c === "a")
+          return foundA2
+      else
+          return start(c)
+  }
+  
+  function foundA2(c) {
+      if (c === "b")
+          return foundB2;
+      else
+          return start(c)
+  }
+  
+  function foundB2(c) {
+      if (c === "x")
+          return end;
+      else
+          return foundB(c)
+  }
+  
+  ```
+
+  - **注意事项**
+    - end是一个自旋trap，任何字符进入到这个状态后都返回end
+    - 状态机在不匹配的情况下比如要目标字符串abc，源字符串ababc，在匹配到第二个a的时候会被吞掉，导致状态机从判断a变为判断a的下个字符b是否为a。可以通过return带上c字符来实现
+
+- 课后作业
+  - 用有限状态机实现abababx的匹配
+  - 用有限状态机实现KMP算法
+
+## HTTP请求
+
+- 七层网络模型
+  - 物理层、数据链路层、网络层、传输层、会话层、表示层和应用层
+
+- TCPIP的基础知识和概念
+  - 流、端口（网卡根据不同端口分发数据）、数据包（数据内容）、IP地址（唯一标识连接网络的设备）、net包和nodejs底层调用的CPP LIB（libnet和libcap）
+
+- HTTP请求
+  - request部分
+    - Request Line：包含请求方法（GET\POST\DELETE\PUT）和使用的HTTP协议（1.1、2.0）
+    - Headers：包含请求的地址、Content-type（JSON、Plain-text）
+    - body：param参数
